# mkdocs-embed-external-markdown

./: .bumpversion.cfg  .gitignore  .python-version  README.md  bump_version.py  publish copy.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_release_if_new_version.yml  poetry-publish.yml  publish-to-pypi.yml  publish.yml
Archive/: poetry-publish.yml  pyproject.toml
dev/: logic.py
external-markdown/: external-markdown.py
external_markdown/: plugin.py
tests/external-markdown/: test_plugin.py
