
[tool.poetry]
name = "mkdocs-embed-external-markdown"
version = "2.3.0"
description = "Mkdocs plugin that allow to inject external markdown or markdown section from given url"
authors = ["fire1ce <dev@3os.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fire1ce/mkdocs-embed-external-markdown"
homepage = "https://3os.org/guides/markdown-cheatsheet/external-markdown/"
keywords = [
    "mkdocs", "plugin", "markdown", "external-markdown", "embed", "external", "markdown-section"
]
packages = [
    { include = "external_markdown/plugin.py" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.27.1"
Jinja2 = "^3.0.3"


[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
external-markdown = 'external_markdown.plugin:EmbedExternalMarkdown'